[package]
name = "sway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sway"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
numpy = "0.16.2"
num-traits = "0.2.15"
once_cell = "1.13.0"
nalgebra-sparse = "0.7.0"
rayon = "1.5.3"
ndarray = { version = "0.15.4", features =['rayon'] }
ndarray-rand = "0.14.0"
rand = "0.8.5"
kiddo = "0.2.4"
statrs = "0.15.0"
itertools = "0.10.3"